[package]
name = "compl"
version = "1.0.0"
edition = "2024"

[dependencies]
glob = "0.3.3"
thiserror = "2.0.16"

[lints.clippy]
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap-used = "warn"
missing-errors-doc = "warn"
